@@ -1,3 +1,8 @@
+2004-05-27  Paul Gatille  <pge@xanadu>
+
+	* src/Scalars/Raw.c: changed ctor to allow creating empty object
+	- added Raw_getData / Raw_setData
+
 2004-05-24  Paul Gatille  <pge@xanadu>
 
         * various: 
